fix: overflow

--- a/src/styles/components/ribbon-container.scss
+++ b/src/styles/components/ribbon-container.scss
@@ -4,6 +4,7 @@
   align-items: center;
   position: relative;
   margin-bottom: 180px;
+  overflow: hidden;
 
   &__title {
     margin: 0 0 24px 0;
@@ -43,6 +44,13 @@
       width: 285px;
       margin-right: 30px;
       position: relative;
+
+      @media (max-width: 1708px) {
+        &:first-child,
+        &:nth-child(2) {
+          display: none;
+        }
+      }
 
       &:last-child {
         margin-right: 0;
